--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,7 @@
 .header{
     border-radius: 24px;
 background: rgb(198, 228, 214);
-margin: 120px 160px 0 160px;
-
+margin: 120px 160px 80px 160px;
 }
 .banner{
     display: flex;
@@ -12,9 +11,7 @@ flex-direction: row;
 justify-content: center;
 align-items: center;
 gap: 64;
-
 padding: 80px 100px 80px 100px;
-
 }
 .banner-content{
     max-width: 600px;
@@ -43,7 +40,102 @@ text-align: left;
     width: 270px;
     height: 56px;
     background-color: #006A50;
+    border: 0; 
+    border-radius: 8px;
 }
 .banner-profile-pic{
 width: 450px;
+} 
+
+ .visions{
+    margin: 0 160px 0 160px;
+    padding: 24px;
+ }
+.section-title{
+    color: rgb(14, 14, 14);
+    font-family: Fira Sans;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.section-description{
+    color: rgba(14, 14, 14, 0.7);
+    font-family: Fira Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.visions-container{
+    display: flex;
+    gap: 24px;
+    padding: 24px;
+}
+.vision-title{
+    color: rgba(14, 14, 14, 0.8);
+font-family: Fira Sans;
+font-size: 20px;
+font-weight: 700;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+}
+.vision-description{
+    color: rgba(14, 14, 14, 0.7);
+    font-family: Fira Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.vision1{
+    box-sizing: border-box;
+border-radius: 16px;
+
+background: rgba(84, 144, 245, 0.2);
+}
+.vision2{
+    box-sizing: border-box;
+border-radius: 16px;
+
+background: rgb(198, 228, 214);
+
+}
+.vision3{
+    box-sizing: border-box;
+border-radius: 16px;
+
+background: rgb(247, 235, 207);
+
+}
+.btn1{
+    font-size: 16px;
+    color: #FFFFFF;
+    border-radius: 8px;
+background: rgb(84, 144, 245);
+width: 122px;
+height: 41px;
+border: 0; 
+}
+.btn2{
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    border-radius: 8px;
+    background: rgb(9, 161, 92);
+    width: 122px;
+    height: 41px ;
+    border: 0;
+}
+.btn3{
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    border-radius: 8px;
+    background: rgb(255, 194, 57);
+    width: 122px;
+    height: 41px ;
+    border: 0;
 }
