--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 .header{
     border-radius: 24px;
 background: rgb(198, 228, 214);
-margin: 120px 160px 80px 160px;
+margin: 120px 160px 0px 160px;
 }
 .banner{
     display: flex;
@@ -48,7 +48,7 @@ width: 450px;
 } 
 
  .visions{
-    margin: 0 160px 0 160px;
+    margin: 0px 160px;
     padding: 24px;
  }
 .section-title{
@@ -72,7 +72,17 @@ width: 450px;
 .visions-container{
     display: flex;
     gap: 24px;
-    padding: 24px;
+    justify-content: center;
+    height: 300px;
+    padding: 20px;
+    text-align: left;
+    margin-top: 10px; 
+    border-left: 10px;
+}
+visions-container,jub{
+    margin: 0;
+    padding: o;
+    justify-content: center;
 }
 .vision-title{
     color: rgba(14, 14, 14, 0.8);
@@ -138,4 +148,73 @@ border: 0;
     width: 122px;
     height: 41px ;
     border: 0;
+}
+.news{ 
+    margin: 0px 160px;
+    
+.news-title{
+    color: rgb(14, 14, 14);
+font-family: Fira Sans;
+font-size: 40px;
+font-weight: 700;
+line-height: 48px;
+letter-spacing: 0%;
+text-align: left;
+}
+.news-des{
+    color: rgba(14, 14, 14, 0.7);
+    font-family: Fira Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: left;  
+}
+.news-container{ 
+    border: 5px solid #FFFFFF;
+display: flex;
+flex-direction: row;
+justify-content: flex-start;
+gap: 32;
+}
+#img{
+    width: 408px;
+height: 306px;
+margin: 0px 32px;
+border-radius: 24px;
+margin-top: 20px;
+   
+}
+.satelite{
+    
+}
+.ban{
+    color: rgba(14, 14, 14, 0.8);
+font-family: Fira Sans;
+font-size: 32px;
+font-weight: 700;
+line-height: 38px;
+letter-spacing: 0%;
+text-align: left;
+}
+.news-desc{
+    color: rgba(14, 14, 14, 0.7);
+font-family: Fira Sans;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+}
+.btn5{
+    adding: 13px 26px 13px 26px;
+    border-radius: 8px;
+background: rgb(0, 106, 80);
+color: rgb(255, 255, 255);
+font-size: 18px;
+font-weight: 600;
+line-height: 22px;
+letter-spacing: 0%;
+text-align: left;
+border: o;
 }
